add : neopixel lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	briscoetech/FreeRTOS_SAMD21@^2.3.0
 	arduino-libraries/Servo@^1.1.8
 	arduino-libraries/Arduino_LSM6DS3@^1.0.0
+	adafruit/Adafruit NeoPixel@^1.10.5
